--- a/src/dzien2_frontend/src/index.scss
+++ b/src/dzien2_frontend/src/index.scss
@@ -1,3 +1,7 @@
+/* ./src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 body {
   font-family: sans-serif;
   font-size: 1.5rem;
